Fixing navBar visibility when changing pages

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   padding: 0;
   overflow-x: hidden; /* Empêche le débordement horizontal */
   box-sizing: border-box; /* Assure que tout est inclus dans les dimensions */
+  scroll-behavior: smooth;
 }
 
 * {
